# ProjectSummary

EVALUATION/: llm_eval.py
RAG_AGENT/: pyproject.toml  rag_agent_role.yaml  requirements.txt
RAG_AGENT/deployment/: local.py  remote.py
RAG_AGENT/rag_agent/: __init__.py  agent.py  config.py
RAG_AGENT/rag_agent/tools/: add_data.py  create_corpus.py  debug_tools.py  get_corpus_info.py  list_corpora.py  rag_query.py  utils.py
gcpagent/: llm_evaluation.py
search_tool/Agent/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  qa_agent.py  requirements.txt  scraping_tool.py  search_tool.py  sites_data.csv
